test/corpus/function.txt
================================================================================
function_call
================================================================================
a=
  b 1
a=
  b=someFunc
  b
    1
    a
c= 10
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (function_call_expr
        (variable_expr
          (identifier))
        (const
          (int)))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (value_declaration
        (decl_left
          (identifier_pattern
            (identifier)))
        (expr_body
          (variable_expr
            (identifier))))
      (function_call_expr
        (variable_expr
          (identifier))
        (const
          (int))
        (variable_expr
          (identifier)))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (const
        (int)))))

================================================================================
function_nested
================================================================================
a= f a b (a b)
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (function_call_expr
        (variable_expr
          (identifier))
        (variable_expr
          (identifier))
        (variable_expr
          (identifier))
        (parenthesized_expr
          (expr_body
            (function_call_expr
              (variable_expr
                (identifier))
              (variable_expr
                (identifier)))))))))

================================================================================
function_with_match
================================================================================
main=
  (|lvl|
      match lvl {
          1u8 => Stdout.line "You're running this in a root shell!"
          n => Stdout.line "Your current shell level"
      })

--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (parenthesized_expr
        (expr_body
          (anon_fun_expr
            (argument_patterns
              (identifier_pattern
                (identifier)))
            (expr_body
              (match_expr
                (variable_expr
                  (identifier))
                (match_branch
                  (const_pattern
                    (uint))
                  (function_call_expr
                    (variable_expr
                      (module)
                      (identifier))
                    (const
                      (string))))
                (match_branch
                  (identifier_pattern
                    (identifier))
                  (function_call_expr
                    (variable_expr
                      (module)
                      (identifier))
                    (const
                      (string))))))))))))

================================================================================
function_lambda_simple
================================================================================
a=|_| a
a=| _ | a
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (wildcard_pattern))
        (expr_body
          (variable_expr
            (identifier))))))
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (wildcard_pattern))
        (expr_body
          (variable_expr
            (identifier)))))))

================================================================================
function_field
================================================================================
a= a.bb a a

--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (function_call_expr
        (field_access_expr
          (variable_expr
            (identifier))
          (identifier))
        (variable_expr
          (identifier))
        (variable_expr
          (identifier))))))

================================================================================
function_same_line
================================================================================
a= html
  "<div>"

--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (function_call_expr
        (variable_expr
          (identifier))
        (const
          (string))))))

================================================================================
function_same_line_long
================================================================================
myHtml=html
  """
  <div>
  """

--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (function_call_expr
        (variable_expr
          (identifier))
        (const
          (multiline_string))))))

================================================================================
function_block_body
================================================================================
add = |a, b| {
    result = a + b
    result
}
--------------------------------------------------------------------------------

(file
  (value_declaration
    (decl_left
      (identifier_pattern
        (identifier)))
    (expr_body
      (anon_fun_expr
        (argument_patterns
          (identifier_pattern
            (identifier))
          (identifier_pattern
            (identifier)))
        (block_body
          (block_declaration
            (decl_left
              (identifier_pattern
                (identifier)))
            (bin_op_expr
              (variable_expr
                (identifier))
              (operator)
              (variable_expr
                (identifier))))
          (variable_expr
            (identifier)))))))
